# RAG_With_glm-ocr

./: .env  .env.example  .gitignore  README.md  multimodel_rag.ipynb  pyproject.toml  requirements.txt
faiss_index/: chunks.pkl  hnsw.index
metadata/: metadata.json
