[project]
name = "files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "chardet>=5.2.0",
    "colorlog>=6.8.0",
    "einops>=0.8.0",
    "faiss-cpu>=1.7.4",
    "flagembedding==1.3.5",
    "httpx>=0.27.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.0.0",
    "langchain>=0.2.14",
    "langchain-community>=0.2.12",
    "langchain-core>=0.2.35",
    "lxml>=5.2.0",
    "markdown>=3.6",
    "nltk>=3.8.0",
    "numpy>=1.26.0,<2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.4.0",
    "pydantic>=2.8.0",
    "pypdf>=4.2.0",
    "pytesseract>=0.3.10",
    "python-dateutil>=2.9.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-magic>=0.4.27",
    "rank-bm25>=0.2.2",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "sseclient-py>=1.8.0",
    "tenacity>=8.5.0",
    "tiktoken>=0.7.0",
    "tinydb>=4.8.0",
    "torch>=2.3.0",
    "tqdm>=4.66.0",
    "transformers>=4.44.0",
]
